force-app/main/default/objects/NPN_Revenue_Targets__c/NPN_Revenue_Targets__c.object-meta.xml
<CustomObject>
    <description>NPN : NPN Revenue Target: It holds revenue targets for each year for each NPN Partner based on their Program/Competency/Level and their Billing Country. It is child of Partner Attribute object (Partner Attributes are child to Account).</description>
    <label>NPN Revenue Target</label>
    <nameField>
        <displayFormat>RT-{000000}</displayFormat>
        <label>Targets ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPN Revenue Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>