force-app/main/default/objects/NPN_Revenue_Targets__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>HYPERLINK(  Partner_Attribute__r.Account_Name__c,   Partner_Attribute__r.Account_Name__r.Name , &quot;_self&quot;)</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>