force-app/main/default/objects/NPN_Revenue_Targets__c/fields/Minimum_Annual_Sales_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Annual_Sales_Commitment__c</fullName>
    <label>Minimum Annual Sales Commitment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>