force-app/main/default/objects/NPN_Revenue_Targets__c/fields/Partner_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Partner_Attribute__c</fullName>
    <inlineHelpText>This is the auto-generated Partner Attribute number. Please do not edit this field.</inlineHelpText>
    <label>Partner Attribute</label>
    <referenceTo>Partner_Attribute__c</referenceTo>
    <relationshipLabel>NPN Revenue Targets</relationshipLabel>
    <relationshipName>NPN_Revenue_Targets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>